# XG-switch

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
src/: App.vue  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: claude_config.rs  codex_config.rs  commands.rs  config.rs  env_manager.rs  lib.rs  main.rs  vscode.rs
src/components/: AdvancedConfigModal.vue  ClaudeConfigPanel.vue  CodexConfigPanel.vue  ConfigSwitcher.vue  EditConfigModal.vue  GeminiConfigPanel.vue  Notification.vue  Sidebar.vue  TabButton.vue
src/components/icons/: ClaudeIcon.vue  CodexIcon.vue  GeminiIcon.vue  JetBrainsIcon.vue  TerminalIcon.vue  VSCodeIcon.vue
src/composables/: useConfigManager.js
