[package]
name = "xg-switch"
version = "0.1.0"
description = "XG-switch 多站点配置切换工具"
authors = ["XG-switch"]
edition = "2021"

[lib]
name = "xg_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5.0"
log = "0.4"

